--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ coverage.xml
 *.pyc
 __pycache__
 db.sqlite3
-media
+migrations
 
 # Flask stuff:
 instance/
@@ -108,6 +108,8 @@ venv.bak/
 
 # Exclude collected Django static files
 static_collected
+media/accounts/
+media/dogs/
 
 # Exclude machine-specific vs code settings
 .vscode
